kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - localhost
    secretName: tls-secret
  rules:
  - host: localhost
    http:
      paths:
      - path: /data1
        pathType: Prefix
        backend:
          service:
            name: flask-backend
            port:
              number: 8000
      - path: /data2
        pathType: Prefix
        backend:
          service:
            name: flask-backend
            port:
              number: 8000
      - path: /healthz
        pathType: Prefix
        backend:
          service:
            name: flask-backend
            port:
              number: 8000

      - path: /assets/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: react-frontend
            port:
              number: 80
      - path: /vite.svg
        pathType: ImplementationSpecific
        backend:
          service:
            name: react-frontend
            port:
              number: 80
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: react-frontend
            port:
              number: 80
